# Lamport-Algorithm-Simulation

./: backend.py  logs.json  main.py  pyproject.toml  references.json  sources.txt
static/: script.js  styles.css
templates/: home.html
